ags (3.16.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsSF2Synth missing program
	* fixed AgsSF2Synth missing resample
	* FIXME:JK: see ags_sf2_synth_util.c

ags (3.16.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsFFPlayer restore from XML

ags (3.16.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added fluid custom filter to AgsSF2SynthUtil

ags (3.16.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing Lv2 plugins
	* updated gtk-doc XML and automake files
	* disabled warp scrollbars
	* minor improvements

ags (3.16.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_sf2_synth_util_load_midi_locale() load sample near midi key

ags (3.16.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsMachineInputLine struct fixes double mapped recalls

ags (3.16.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsSF2Synth
	* implemented ags-fx-sf2-synth
	* implemented AgsApplySF2MidiLocale task
	* implemented AgsSF2MidiLocaleLoader worker thread
	* implemented ags_sf2_synth_util_load_midi_locale()
	* implemented AgsAudiorecInputLine struct fixes double mapped recalls
	* implemented AgsSF2SynthInputLine struct fixes double mapped recalls
	* added configure flag to turn on setting environment variables related to packaging w32 exe

ags (3.15.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed the synths

ags (3.15.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved allow to define AGS_WINDOW_APP_ICON as macro

ags (3.15.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved AgsCompositeEditor AgsMachine::resize-audio-channels() and AgsMachine::resize-pads() to destroy or create AgsWaveEdit
	* improved AgsCompositeEditor::machine-changed() to restore automation ports

ags (3.15.3)
