@@ -1,4 +1,4 @@
-Copyright (C) 2005-2021 Joël Krähemann
+Copyright (C) 2005-2022 Joël Krähemann
 
 Permission is granted to copy, distribute and/or modify this document
 under the terms of the GNU Free Documentation License, Version 1.3
@@ -10,7 +10,6 @@ Free Documentation License".
 * TODO:JK: fix ags_turtle_test.c
 * TODO:JK: implemented AgsUiOscRenewController
 * TODO:JK: implemented AgsConnectableFlags
-* TODO:JK: implemented AgsSF2Synth
 * TODO:JK: implemented AgsSFZSynth
 * FIXME:JK: make indicator orientable
 * TODO:JK: implemented Fx mutex per scope
@@ -22,7 +21,6 @@ Free Documentation License".
 * TODO:JK: migrated to gi18n.h?
 * TODO:JK: migrated unit-tests to GTest?
 * TODO:JK: move ags/X to ags/ui
-* TODO:JK: implemented ags-modify-synth-generator recall
 * TODO:JK: check recall id cleanup
 * TODO:JK: added unit-tests
 * TODO:JK: implement ::seek() of AgsMidiParser and AgsOscParser
@@ -31,7 +29,6 @@ Free Documentation License".
 * TODO:JK: improve thread-safety to LADSPA and DSSI
 * TODO:JK: removed ags_id_generator.[ch]
 * TODO:JK: improved ags_audio_signal_feed() reduce over-head
-* TODO:JK: refactored AgsAutomationEditor to be more light-weight
 * TODO:JK: implemented AgsConnectable:disconnect() to all implementing objects
 * TODO:JK: implemented AgsScaleArea properties
 * TODO:JK: implemented AgsApplicationContext properties
